// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-avatar: should render with #darkorange background 1`] = `
.emotion-0.emotion-0 {
  background-color: darkorange;
}

<IssueAvatar
  status="Pending"
>
  <WithStyles(ForwardRef(Avatar))
    className="emotion-0 emotion-1"
    status="Pending"
  >
    <ForwardRef(Avatar)
      className="emotion-0 emotion-1"
      classes={
        Object {
          "circle": "MuiAvatar-circle",
          "colorDefault": "MuiAvatar-colorDefault",
          "img": "MuiAvatar-img",
          "root": "MuiAvatar-root",
          "rounded": "MuiAvatar-rounded",
          "square": "MuiAvatar-square",
        }
      }
      status="Pending"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle emotion-0 emotion-1 MuiAvatar-colorDefault"
        status="Pending"
      >
        C
      </div>
    </ForwardRef(Avatar)>
  </WithStyles(ForwardRef(Avatar))>
</IssueAvatar>
`;

exports[`issue-avatar: should render with #eee background 1`] = `
.emotion-0.emotion-0 {
  background-color: #eee;
}

<IssueAvatar>
  <WithStyles(ForwardRef(Avatar))
    className="emotion-0 emotion-1"
  >
    <ForwardRef(Avatar)
      className="emotion-0 emotion-1"
      classes={
        Object {
          "circle": "MuiAvatar-circle",
          "colorDefault": "MuiAvatar-colorDefault",
          "img": "MuiAvatar-img",
          "root": "MuiAvatar-root",
          "rounded": "MuiAvatar-rounded",
          "square": "MuiAvatar-square",
        }
      }
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle emotion-0 emotion-1 MuiAvatar-colorDefault"
      >
        C
      </div>
    </ForwardRef(Avatar)>
  </WithStyles(ForwardRef(Avatar))>
</IssueAvatar>
`;

exports[`issue-avatar: should render with #green background 1`] = `
.emotion-0.emotion-0 {
  background-color: green;
}

<IssueAvatar
  status="Closed"
>
  <WithStyles(ForwardRef(Avatar))
    className="emotion-0 emotion-1"
    status="Closed"
  >
    <ForwardRef(Avatar)
      className="emotion-0 emotion-1"
      classes={
        Object {
          "circle": "MuiAvatar-circle",
          "colorDefault": "MuiAvatar-colorDefault",
          "img": "MuiAvatar-img",
          "root": "MuiAvatar-root",
          "rounded": "MuiAvatar-rounded",
          "square": "MuiAvatar-square",
        }
      }
      status="Closed"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle emotion-0 emotion-1 MuiAvatar-colorDefault"
        status="Closed"
      >
        C
      </div>
    </ForwardRef(Avatar)>
  </WithStyles(ForwardRef(Avatar))>
</IssueAvatar>
`;

exports[`issue-avatar: should render with #red background 1`] = `
.emotion-0.emotion-0 {
  background-color: red;
}

<IssueAvatar
  status="Open"
>
  <WithStyles(ForwardRef(Avatar))
    className="emotion-0 emotion-1"
    status="Open"
  >
    <ForwardRef(Avatar)
      className="emotion-0 emotion-1"
      classes={
        Object {
          "circle": "MuiAvatar-circle",
          "colorDefault": "MuiAvatar-colorDefault",
          "img": "MuiAvatar-img",
          "root": "MuiAvatar-root",
          "rounded": "MuiAvatar-rounded",
          "square": "MuiAvatar-square",
        }
      }
      status="Open"
    >
      <div
        className="MuiAvatar-root MuiAvatar-circle emotion-0 emotion-1 MuiAvatar-colorDefault"
        status="Open"
      >
        C
      </div>
    </ForwardRef(Avatar)>
  </WithStyles(ForwardRef(Avatar))>
</IssueAvatar>
`;
